--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.6.0'
+version = '0.6.3'
 group = 'com.nyfaria.nyfsquiver' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'NyfsQuiver'
 
@@ -93,12 +93,12 @@ mixin {
 dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
 
-    minecraft 'net.minecraftforge:forge:1.18-38.0.17'
+    minecraft 'net.minecraftforge:forge:1.18.1-39.0.5'
 
     annotationProcessor "org.spongepowered:mixin:0.8.3:processor"
 
-    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.18-5.0.2.4")
-    implementation fg.deobf("curse.maven:shulker-tooltip-292899:3545878")
+    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.18.1-5.0.3.0")
+    //implementation fg.deobf("curse.maven:shulker-tooltip-292899:3545878")
     //implementation fg.deobf("curse.maven:cofh-core-69162:3554750")
     //implementation fg.deobf("curse.maven:archers-paradox-353399:3554751")
     //compileOnly fg.deobf("curse.maven:spartan-weaponry-278141:3164046")
