--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/"
 
 [[mods]] 
 modId="nyfsquiver"
-version="0.6.3"
+version="1.18.1-0.6.3"
 displayName="Nyf's Quiver"
 authors="TheNyfaria"
 description='''
