--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/"
 
 [[mods]] 
 modId="nyfsquiver"
-version="0.5.2"
+version="1.16.5-0.6.2"
 displayName="Nyf's Quiver"
 authors="TheNyfaria"
 description='''
