recipe fixes, attempted fix for Epic Fight Mod

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.16.5-0.6.2'
+version = '1.16.5-0.6.3'
 group = 'com.nyfaria.nyfsquiver' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'NyfsQuiver'
 
@@ -108,6 +108,7 @@ dependencies {
     implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.16.5-4.0.6.7")
     implementation fg.deobf("curse.maven:cofh-core-69162:3556973")
     implementation fg.deobf("curse.maven:archers-paradox-353399:3554751")
+    implementation fg.deobf("curse.maven:epic-fight-mod-405076:3534866")
     compileOnly fg.deobf("curse.maven:spartan-weaponry-278141:3164046")
 
 }
