--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,9 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+apply from: 'https://raw.githubusercontent.com/SizableShrimp/ForgeUpdatesRemapper/main/remapper.gradle'
 
-version = '1.19-0.7.1'
+version = '1.19-0.7.2'
 group = 'com.nyfaria.nyfsquiver' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'NyfsQuiver'
 
@@ -93,14 +94,14 @@ mixin {
 dependencies {
     implementation 'org.jetbrains:annotations:20.1.0'
 
-    minecraft 'net.minecraftforge:forge:1.19-41.0.16'
+    minecraft 'net.minecraftforge:forge:1.19-41.1.0'
 
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 
-    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19-5.1.0.1")
+    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19-5.1.0.4")
 
-    implementation fg.deobf("curse.maven:enchantment-descriptions-250419:3823905")
-    implementation fg.deobf("curse.maven:bookshelf-228525:3823528")
+    implementation fg.deobf("curse.maven:enchantment-descriptions-250419:3901748")
+    implementation fg.deobf("curse.maven:bookshelf-228525:3901609")
 
 }
 
