--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,22 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
+minecraft_version=1.18.2
+minecraft_version_range=[1.18.2,1.19)
+forge_version=40.1.80
+# The forge version range can use any version of forge or match the loader version range
+forge_version_range=[40.1.0,)
+# The loader version range can only be the major version of Forge/FML
+loader_version_range=[40,)
+mappings_channel=parchment
+mappings_version=2022.09.04-1.18.2
+
+mod_id=nyfsquiver
+mod_name=Nyf's Quivers
+mod_version=0.7.3
+mod_base_package=com.nyfaria.nyfsquiver
+mod_authors=Nyfaria
+mod_description=Adds 5 levels of Quivers to Minecraft
+
 capabilitysyncer_version=1.18.2-2.0.9-SNAPSHOT
+capabilitysyncer_version_range=[1.18.2-2.0.9-SNAPSHOT,1.18.2-3.0.0)
