--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,23 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+minecraft_version=1.20.1
+minecraft_version_range=[1.20,1.21)
+forge_version=47.1.0
+# The forge version range can use any version of forge or match the loader version range
+forge_version_range=[47,)
+# The loader version range can only be the major version of Forge/FML
+loader_version_range=[47,)
+mappings_channel=parchment
+mappings_version=2023.07.09-1.20.1
+
+mod_id=nyfsquiver
+mod_name=Nyf's Quiver
+mod_version=8.0.0
+mod_base_package=com.nyfaria.nyfsquiver
+mod_authors=Nyfaria
+mod_description=Adds multiple Tiers of Quivers to hold Arrows
+
+# Dependencies
+mixin_version=0.8.5
