--- a/gradle.properties
+++ b/gradle.properties
@@ -15,10 +15,16 @@ mappings_version=2023.07.09-1.20.1
 
 mod_id=nyfsquiver
 mod_name=Nyf's Quiver
-mod_version=8.0.0
+mod_version=1.0.1
 mod_base_package=com.nyfaria.nyfsquiver
 mod_authors=Nyfaria
 mod_description=Adds multiple Tiers of Quivers to hold Arrows
 
 # Dependencies
 mixin_version=0.8.5
+
+# Publishing
+curseforge_publishing_enabled=true
+curseforge_project_id=482731
+modrinth_publishing_enabled=true
+modrinth_project_id=hReJ61of
